--- a/tests/test-muxing.html
+++ b/tests/test-muxing.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>LibAV Opus encoding test</title>
+        <title>LibAV muxing</title>
     </head>
     <body>
         <script type="text/javascript">LibAV = {base:".."}</script>
