--- a/tests/test-encode-audio.html
+++ b/tests/test-encode-audio.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>LibAV Opus encoding test</title>
+        <title>LibAV encode-audio</title>
     </head>
     <body>
         <script type="text/javascript">LibAV = {base:".."}</script>
@@ -65,7 +65,6 @@
                     if (c === 0)
                         throw new Error("Could not allocate audio codec context");;
                     return Promise.all([
-                        libav.ff_check_sample_fmt(codec, libav.AV_SAMPLE_FMT_FLT),
                         libav.AVCodecContext_set(c, {
                             bit_rate: 128000,
                             sample_fmt: libav.AV_SAMPLE_FMT_FLT,
@@ -77,8 +76,6 @@
                     ]);
 
                 }).then(function(ret) {
-                    if (ret[0] === 0)
-                        throw new Error("Encoder does not support sample format");
                     return libav.avcodec_open2(c, codec, 0);
 
                 }).then(function(ret) {
@@ -119,7 +116,7 @@
                         }).then(function(ret) {
                             if (ret < 0)
                                 throw new Error();
-                            return libav.AVFrame_data0(frame);
+                            return libav.AVFrame_data_a(frame, 0);
                         }).then(function(ret) {
                             samples = ret;
                             var samplesIn = [];
