--- a/tests/test-filtering-audio.html
+++ b/tests/test-filtering-audio.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>LibAV Opus encoding test</title>
+        <title>LibAV filtering-audio</title>
     </head>
     <body>
         <script type="text/javascript">LibAV = {base:".."}</script>
