--- a/tests/test-muxing-simple.html
+++ b/tests/test-muxing-simple.html
@@ -24,7 +24,7 @@
                     pkt = ret[3];
                     frame_size = ret[4];
 
-                    return libav.ff_init_format({filename: "tmp.ogg", open: true}, [[c, 1, 48000]]);
+                    return libav.ff_init_muxer({filename: "tmp.ogg", open: true}, [[c, 1, 48000]]);
 
                 }).then(function(ret) {
                     oc = ret[0];
@@ -61,7 +61,7 @@
                     return libav.av_write_trailer(oc);
 
                 }).then(function() {
-                    return libav.ff_free_format(oc, pb);
+                    return libav.ff_free_muxer(oc, pb);
 
                 }).then(function() {
                     return libav.ff_free_encoder(c, frame, pkt);
