--- a/tests/test-demuxing-simple.html
+++ b/tests/test-demuxing-simple.html
@@ -9,59 +9,9 @@
         <script type="text/javascript" src="exa.opus.js"></script>
         <script type="text/javascript">
             // This is a loose port of doc/examples/demuxing_decoding.c, simplified
-            function open_codec_context(fmt_ctx) {
-                var libav = LibAV;
-                var stream_index, st, codecpar, dec, dec_ctx;
-
-                return libav.av_find_best_stream(fmt_ctx, libav.AVMEDIA_TYPE_AUDIO, -1, -1, 0, 0).then(function(ret) {
-                    stream_index = ret;
-                    if (stream_index < 0)
-                        throw new Error("Could not find stream in input file");
-
-                    // Find a decoder for the stream
-                    return libav.AVFormatContext_streams_a(fmt_ctx, stream_index);
-
-                }).then(function(ret) {
-                    st = ret;
-                    return libav.AVStream_codecpar(st);
-                }).then(function(ret) {
-                    codecpar = ret;
-                    return libav.AVCodecParameters_codec_id(codecpar);
-                }).then(function(ret) {
-                    return libav.avcodec_find_decoder(ret);
-
-                }).then(function(ret) {
-                    dec = ret;
-                    if (dec === 0)
-                        throw new Error("Failed to find codec");
-
-                    return libav.avcodec_alloc_context3(dec);
-
-                }).then(function(ret) {
-                    dec_ctx = ret;
-                    if (dec_ctx === 0)
-                        throw new Error("Failed to allocate the codec context");
-
-                    return libav.avcodec_parameters_to_context(dec_ctx, codecpar);
-
-                }).then(function(ret) {
-                    if (ret < 0)
-                        throw new Error("Failed to copy codec parameters to decoder context");
-
-                    return libav.avcodec_open2(dec_ctx, dec, 0);
-
-                }).then(function(ret) {
-                    if (ret < 0)
-                        throw new Error("Failed to open codec");
-
-                    return new Promise(function(res, rej) { res([stream_index, dec_ctx]); });
-                });
-            }
-
             function main() {
                 var libav = LibAV;
-                var fmt_ctx, audio_stream_idx, pkt, frame, codec, c;
-                var inPackets;
+                var fmt_ctx, streams, audio_stream_idx, pkt, frame, codec, c;
 
                 new Promise(function(res, rej) {
                     var xhr = new XMLHttpRequest();
@@ -83,52 +33,37 @@
                     return libav.writeFile("tmp.opus", new Uint8Array(ret));
 
                 }).then(function() {
-                    return libav.avformat_open_input_js("tmp.opus", null, null);
+                    ta = performance.now();
+                    return libav.ff_init_demuxer_file("tmp.opus");
 
                 }).then(function(ret) {
-                    fmt_ctx = ret;
-                    if (fmt_ctx === 0)
-                        throw new Error("Could not open source file");
+                    fmt_ctx = ret[0];
+                    streams = ret[1];
 
-                    return open_codec_context(fmt_ctx);
+                    var si, stream;
+                    for (si = 0; si < streams.length; si++) {
+                        stream = streams[si];
+                        if (stream.codec_type === libav.AVMEDIA_TYPE_AUDIO)
+                            break;
+                    }
+                    if (si >= streams.length)
+                        throw new Error("Couldn't find audio stream");
+
+                    audio_stream_idx = stream.index;
+                    return libav.ff_init_decoder(stream.codec_id);
 
                 }).then(function(ret) {
-                    audio_stream_idx = ret[0];
                     c = ret[1];
+                    pkt = ret[2];
+                    frame = ret[3];
 
-                    return Promise.all([
-                        libav.av_packet_alloc(),
-                        libav.av_frame_alloc()
-                    ]);
+                    return libav.ff_read_multi(fmt_ctx, pkt);
 
                 }).then(function(ret) {
-                    pkt = ret[0];
-                    frame = ret[1];
-                    inPackets = [];
+                    if (ret[0] !== libav.AVERROR_EOF)
+                        throw new Error("Error reading: " + ret[0]);
 
-                    return new Promise(function(res, rej) {
-                        function readFrame() {
-                            libav.av_read_frame(fmt_ctx, pkt).then(function(ret) {
-                                if (ret < 0) {
-                                    res(ret);
-                                    return;
-                                }
-
-                                return libav.ff_copyout_packet(pkt);
-
-                            }).then(function(ret) {
-                                if (!ret) return;
-                                console.error(ret);
-                                inPackets.push(ret);
-                                readFrame();
-
-                            }).catch(rej);
-                        }
-                        readFrame();
-                    });
-
-                }).then(function() {
-                    return libav.ff_decode_multi(c, pkt, frame, inPackets, true);
+                    return libav.ff_decode_multi(c, pkt, frame, ret[1], true);
 
                 }).then(function(ret) {
                     var div = document.createElement("pre");
