--- a/tests/test-decode-audio-simple.html
+++ b/tests/test-decode-audio-simple.html
@@ -7,49 +7,6 @@
         <script type="text/javascript">LibAV = {base:".."}</script>
         <script type="text/javascript" src="../libav-1.0.4.1-default.js"></script>
         <script type="text/javascript" src="exa.opus.js"></script>
-        <script type="text/javascript">
-            /* This is sort of a port of doc/examples/decode_audio.c, but with
-             * no demuxing, and with Opus */
-            function main() {
-                var libav = LibAV;
-                var pkt, frame, codec, c;
-
-                libav.ff_init_decoder("libopus").then(function(ret) {
-                    codec = ret[0];
-                    c = ret[1];
-                    pkt = ret[2];
-                    frame = ret[3];
-
-                    // Reformat the packets
-                    var tmpPackets = OpusExa.map(function(p) {
-                        return {data: p};
-                    });
-
-                    // Decode them
-                    return libav.ff_decode_multi(c, pkt, frame, tmpPackets, true);
-
-                }).then(function(ret) {
-                    var div = document.createElement("pre");
-                    div.innerText = "[\n" + ret.map(function(pkt) {
-                        return "new Uint8Array([" + Array.prototype.join.call(pkt.data, ", ") + "])";
-                    }).join(",\n") + "\n]";
-                    document.body.appendChild(div);
-
-                    return libav.ff_free_decoder(c, pkt, frame);
-
-                }).then(function() {
-                    // Nothing
-
-                }).catch(function(err) {
-                    alert(err);
-                });
-            }
-
-            if (LibAV.ready) {
-                main();
-            } else {
-                LibAV.onready = main;
-            }
-        </script>
+        <script type="text/javascript" src="test-decode-audio-simple.js"></script>
     </body>
 </html>
