Changing how the release works so that everything is always in dist/, so release and source builds don't look different

--- a/tests/test-demuxing-device.html
+++ b/tests/test-demuxing-device.html
@@ -4,7 +4,7 @@
         <title>LibAV demuxing-device</title>
     </head>
     <body>
-        <script type="text/javascript">LibAV = {base:".."}</script>
+        <script type="text/javascript">LibAV = {base:"../dist"}</script>
         <script type="text/javascript" src="../libav-3.7.5.0.1-default.js"></script>
         <script type="text/javascript" src="exa.opus.js"></script>
         <script type="text/javascript" src="test-demuxing-device.js"></script>
