--- a/tests/test-demuxing.html
+++ b/tests/test-demuxing.html
@@ -4,7 +4,7 @@
         <title>LibAV demuxing</title>
     </head>
     <body>
-        <script type="text/javascript">LibAV = {base:".."}</script>
+        <script type="text/javascript">LibAV = {base:"../dist"}</script>
         <script type="text/javascript" src="../libav-3.7.5.0.1-default.js"></script>
         <script type="text/javascript" src="exa.opus.js"></script>
         <script type="text/javascript" src="test-demuxing.js"></script>
