--- a/tests/test-filtering-audio-simple.html
+++ b/tests/test-filtering-audio-simple.html
@@ -4,7 +4,7 @@
         <title>LibAV filtering-audio-simple</title>
     </head>
     <body>
-        <script type="text/javascript">LibAV = {base:".."}</script>
+        <script type="text/javascript">LibAV = {base:"../dist"}</script>
         <script type="text/javascript" src="../libav-3.7.5.0.1-default.js"></script>
         <script type="text/javascript" src="test-filtering-audio-simple.js"></script>
     </body>
