--- a/tests/test-muxing.html
+++ b/tests/test-muxing.html
@@ -4,7 +4,7 @@
         <title>LibAV muxing</title>
     </head>
     <body>
-        <script type="text/javascript">LibAV = {base:".."}</script>
+        <script type="text/javascript">LibAV = {base:"../dist"}</script>
         <script type="text/javascript" src="../libav-3.7.5.0.1-default.js"></script>
         <script type="text/javascript" src="test-muxing.js"></script>
     </body>
