The demo decoder should not dismantle itself, for late seeking. Fixes #33
The demo set the EOF flag on the decoder if it got EOF from the demuxer,
but that causes the decoder to close, which meant you couldn't seek
after EOF. This fixes that.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -190,8 +190,7 @@
 
                         // Decode it
                         const frames = await libav.ff_decode_multi(
-                            c, pkt, frame, [vPacket],
-                            res === libav.AVERROR_EOF && vIdx === vPackets.length - 1
+                            c, pkt, frame, [vPacket], false
                         );
 
                         // Display any frames here
