--- a/demo/demo.html
+++ b/demo/demo.html
@@ -21,8 +21,6 @@
     <body>
         <script type="text/javascript">(async function() {
             try {
-                const version = "4.10.6.1.1";
-
                 const dce = document.createElement.bind(document);
                 const main = dce("div");
                 document.body.appendChild(main);
@@ -58,7 +56,7 @@
                 LibAV = {base: "../dist"};
                 await new Promise(res => {
                     const scr = dce("script");
-                    scr.src = `../dist/libav-${version}-${variant}.js?${Math.random()}`;
+                    scr.src = `../dist/libav-${variant}.js?${Math.random()}`;
                     scr.onload = res;
                     scr.onerror = () => {
                         alert("Failed to load variant!");
